# practice-rs

./: .gitignore  README.md  deploy-docker-stack.sh  docker-compose.yml  index.md  manage-kind-cluster.sh  setup-local.bash  setup-local.sh  setup.bash
db/: docker-compose.yml
fe/: Cargo.toml  Makefile.toml
fe/src/: lib.rs
kind-cluster/: dev-stack.yaml
kind-cluster/deployments/: db-deployment.yaml  pv-deployment.yaml
ms/: .dockerignore  Dockerfile
ms/logging-ms/: Cargo.toml  test_payload.json
ms/logging-ms/migrations/2021-01-22-171101_create_posts/: up.sql
ms/logging-ms/src/: lib.rs  main.rs  models.rs  route_functions.rs  schema.rs
