[package]
name = "fe"
version = "0.1.0"
authors = ["Alexei Ozerov <alexei.ozerov.7@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17"
wasm-bindgen = "0.2.70"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
anyhow = "1.0.32"
wasm-logger = "0.2.0"
log = "0.4.6"