[package]
name = "ms"
version = "0.1.0"
authors = ["Alexei Ozerov <alexei.ozerov.7@gmail.com>"]
edition = "2018"

[dependencies]
log = "*"
env_logger = "*"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
diesel = { version = "1.0.0", features = ["postgres"] }
